--- a/index.html
+++ b/index.html
@@ -1,1 +1,336 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Andrea Carter Developer Portfolio">
+
+    <title>Andrea Carter :: Portfolio</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link href="assets/css/style.css" rel="stylesheet">
+
+
+</head>
+
+<body>
+
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Andrea Carter</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+                    </li>
+                    <!-- Hiding portfolio link until section is ready -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/mirtacarter/" target="_blank"><i
+                                class="fab fa-linkedin"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/andreacarter" target="_blank"><i
+                                class="fab fa-github"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mailto:andreacarter029@gmail.com"><i
+                                class="fas fa-envelope-open-text"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Header Section -->
+    <header class="masthead">
+        <div class="container-fluid" id="masthead">
+            <h1 class="section-heading">
+                <strong>Andrea Carter</strong>
+            </h1>
+            <div class="row mt-3">
+                <h3>
+                    Tech Professional
+                </h3>
+            </div>
+            <div class="row mt-2">
+                <h3>
+                    Metro Detroit
+                </h3>
+            </div>
+            <div class="row mt-3">
+                <a class="btn-xl btn-primary js-scroll-trigger" href="#about">Learn More <i
+                        class="fas fa-chevron-down"></i></a>
+            </div>
+        </div>
+
+    </header>
+
+
+    <!-- About Section -->
+    <section id="about" class="bg-primary">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col mx-auto text-center">
+                    <img class="align-self-center img-fluid rounded-circle shadow-lg ml-2" id="profilepic"
+                        src="assets/images/ProfilePicture.jpg" alt="">
+                </div>
+                <div class="col-lg-8">
+                    <div class="media-body" id="bio">
+                        <p>
+                        <h2 class="section-heading text-uppercase text-center">About</h2>
+                        </p>
+                        <p class="font-weight-normal mt-1">
+                            I began my career in the financial services industry over a decade ago, starting off in
+                            retail baking and eventually transitioning into mortgage operations and compliance. I spent much of this time
+                            using poorly designed and difficult to navigate software to complete my day-to-day responsibilities,
+                            using software that had not been implemented or configured correctly, or using software with great features 
+                            that were simply not utilized.
+                        <p>
+                            Eventually, I had enough, and changed my focus to technology, steering my career into client
+                            success, product management, and software development roles, where I have been committed to facilitating end-user success.
+                            Leveraging my diverse background and technical profiency, I have worked extensively as a technical 
+                            liason collaborating with cross-functional teams, managing stakeholder expectations, and delivering high-quality
+                            solutions. As a developer, I have been a significant contributor to the design, development,
+                            and maintenance of applications improving data integrity, regulatory compliance, and workflow productivity.
+                        </p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <!-- Experience Section -->
+    <section id="experience" class="bg-dark">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-lg mx-auto text-center">
+                    <h2 class="section-heading text-uppercase text-white pb-1">Experience</h2>
+                </div>
+            </div>
+            <!-- Work Experience -->
+            <div class="card-deck">
+                <div class="card shadow">
+                    <div class="card-header">
+                        <h5 class="card-title">Software Developer</h5>
+                        <h6 class="card-subtitle text-muted">Homepoint</h6>
+                        <p class="card-text"><small class="text-muted">March 2022 - April 2023</small></p>
+                    </div>
+                    <div class="card-body">
+                        Utilizing various technologies including Appian's proprietary SAIL language and Java process
+                        engines, REST APIs, GraphQL,
+                        Kafka, and Azure Event Grid, contributed to the design, development, and rapid delivery of
+                        user-friendly workspaces optimized for business processes,
+                        transitioning over 1800 users out of a cumbersome legacy system and resulting in significant
+                        compliance cost savings and improved turn times.
+                    </div>
+                </div>
+                <div class="card shadow">
+                    <div class="card-header">
+                        <h5 class="card-title">Product Owner</h5>
+                        <h6 class="card-subtitle text-muted">Homepoint</h6>
+                        <p class="card-text"><small class="text-muted">
+                                December 2020 - March 2022</small></p>
+                    </div>
+                    <div class="card-body">
+                        Executed the product vision for Client Experience applications, collaborating with multiple
+                        development teams
+                        to navigate dependencies and integration work, leading user story refinement and product
+                        demonstrations, and
+                        working directly with clients to deliver a centralized loan pipeline management portal for
+                        Correspondent clients,
+                        as well as an enterprise case management application supporting multiple business teams handling
+                        over 421,000 inquiries.
+                    </div>
+                </div>
+            </div>
+            <div class="w-100 p-2"></div>
+            <div class="card-deck">
+                <div class="card shadow">
+                    <div class="card-header">
+                        <h5 class="card-title">Business Analyst
+                        </h5>
+                        <h6 class="card-subtitle text-muted">AdvantageCS</h6>
+                        <p class="card-text"><small class="text-muted">
+                                September 2019 - November 2020</small></p>
+                    </div>
+                    <div class="card-body">
+                        Provided strategic technical consulting to clients as part of the Managed Services team,
+                        overseeing the execution of enterprise software upgrade projects for
+                        multiple clients with timelines ranging from 3 to 10 months, completing 100%
+                        of upgrades within approved budget and on target cutover date set by client, as well as working
+                        with solution design team on behalf of client to outline requirements for delivery of large
+                        custom software modifications.
+
+                    </div>
+                </div>
+                <div class="card shadow">
+                    <div class="card-header">
+                        <h5 class="card-title">Business Analyst</h5>
+                        <h6 class="card-subtitle text-muted">Taylor Morrison</h6>
+                        <p class="card-text"><small class="text-muted">
+                                November 2018 - September 2019</small></p>
+                    </div>
+                    <div class="card-body">
+                        Supported the Home Funding division through all phases of the software development life cycle,
+                        including developing custom enhancements such as business rules, input forms, and
+                        workflows utilizing VB.NET within the enterprise loan origination system to
+                        fulfill business goals, meet compliance requirements, and support data
+                        integrity and reporting needs.
+                    </div>
+                </div>
+            </div>
+            <!-- Education and Certifications -->
+            <div class="row justify-content-center pb-1">
+                <div class="col-lg mx-auto text-center">
+                    <h2 class="section-heading text-uppercase text-white pt-5 pb-1">Education and Certifications</h2>
+                </div>
+            </div>
+            <div class="card-deck">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h6 class="card-title">Certified SAFe 5 Product Owner</h6>
+                        <h6 class="card-subtitle text-muted">Scaled Agile, 2021</h6>
+                    </div>
+                </div>
+                <div class="card h-100 shadow">
+                    <div class="card-body">
+                        <h6 class="card-title">Certified Full-Stack Web Developer</h6>
+                        <h6 class="card-subtitle text-muted">University of Central Florida, 2018</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="w-100 p-2"></div>
+            <div class="card-deck">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h6 class="card-title">Master of Business Administration, Finance
+                        </h6>
+                        <h6 class="card-subtitle text-muted">Wayne State University, 2012</h6>
+                    </div>
+                </div>
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h6 class="card-title">Bachelor of Science, Sports Management</h6>
+                        <h6 class="card-subtitle text-muted">University of Florida, 2006</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Portfolio Section -->
+    <!-- Hidden until projects are ready -->
+    <!-- <section id="portfolio" class="bg-mid">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col mx-auto text-center">
+                    <h2 class="section-heading text-uppercase text-white">Portfolio</h2>
+                </div>
+            </div>
+            <div id="portfolioCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#portfolioCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#portfolioCarousel" data-slide-to="1"></li>
+                    <li data-target="#portfolioCarousel" data-slide-to="2"></li>
+                    <li data-target="#portfolioCarousel" data-slide-to="3"></li>
+                    <li data-target="#portfolioCarousel" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img
+                                class="mx-auto d-block h-100" src="assets/images/gallery1.jpg" alt="" id="gallery"></a>
+                        <div class="carousel-caption">
+                            <a class="portfolio-box" href="https://mirtacarter.github.io/triviagame/" target="_blank">
+                                <h4 class="text-uppercase">Lively</h4>
+                            <p>Search for jobs based on well-being</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                                src="assets/images/gallery2.jpg" alt="" id="gallery"></a>
+                        <div class="carousel-caption">
+                            <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
+                                <h4 class="text-uppercase">Pantry Partner</h4>
+                            <p>Search for recipes based on ingredients already on hand</p></a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                                src="assets/images/gallery3.jpg" alt="" id="gallery"></a>
+                        <div class="carousel-caption">
+                            <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
+                                <h4 class="text-uppercase">Radius</h4>
+                            <p>View attractions and restaurants around a specific location</p></a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                                src="assets/images/gallery4.jpg" alt="" id="gallery"></a>
+                        <div class="carousel-caption">
+                            <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
+                                <h4 class="text-uppercase">Civitas</h4>
+                            <p>Community Reinvestment Act tracking for banks</p></a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                                src="assets/images/gallery5.jpg" alt="" id="gallery"></a>
+                        <div class="carousel-caption">
+                            <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
+                                <h4 class="text-uppercase">Beat the Clock</h4>
+                            <p>Fast Paced Sports Trivia Game</p></a>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" data-target="#portfolioCarousel" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" data-target="#portfolioCarousel" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </section> -->
+
+
+
+    <!-- Bootstrap core JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
+
+    <!-- Custom JS -->
+    <script src="assets/scrolling.js"></script>
+</body>
+
+</html>
