Simplified design, added logo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Custom fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -68,22 +69,10 @@
     <!-- Header Section -->
     <header class="masthead">
         <div class="container-fluid" id="masthead">
-            <h1 class="section-heading">
-                <strong>Andrea Carter</strong>
-            </h1>
-            <div class="row mt-3">
-                <h3>
-                    Tech Professional
-                </h3>
-            </div>
-            <div class="row mt-2">
-                <h3>
-                    Metro Detroit
-                </h3>
-            </div>
-            <div class="row mt-3">
-                <a class="btn-xl btn-primary js-scroll-trigger" href="#about">Learn More <i
-                        class="fas fa-chevron-down"></i></a>
+            <img class="align-self-center img-fluid" id="logo" src="assets/images/logo.png" alt="">
+            <br>
+            <div class="float-right">
+            <a href="#about"><img class="align-self-end img-fluid" id="learnmore" src="assets/images/learnmore.png" alt=""></a>
             </div>
         </div>
 
