--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
                     </li>
-                    <!-- Hiding portfolio link until section is ready -->
-                    <!-- <li class="nav-item">
+                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-                    </li> -->
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.linkedin.com/in/mirtacarter/" target="_blank"><i
                                 class="fab fa-linkedin"></i></a>
@@ -72,7 +71,8 @@
             <img class="align-self-center img-fluid" id="logo" src="assets/images/logo.png" alt="">
             <br>
             <div class="float-right">
-            <a href="#about"><img class="align-self-end img-fluid" id="learnmore" src="assets/images/learnmore.png" alt=""></a>
+                <a href="#about"><img class="align-self-end img-fluid" id="learnmore" src="assets/images/learnmore.png"
+                        alt=""></a>
             </div>
         </div>
 
@@ -94,17 +94,25 @@
                         </p>
                         <p class="font-weight-normal mt-1">
                             I began my career in the financial services industry over a decade ago, starting off in
-                            retail baking and eventually transitioning into mortgage operations and compliance. I spent much of this time
-                            using poorly designed and difficult to navigate software to complete my day-to-day responsibilities,
-                            using software that had not been implemented or configured correctly, or using software with great features 
+                            retail baking and eventually transitioning into mortgage operations and compliance. I spent
+                            much of this time
+                            using poorly designed and difficult to navigate software to complete my day-to-day
+                            responsibilities,
+                            using software that had not been implemented or configured correctly, or using software with
+                            great features
                             that were simply not utilized.
                         <p>
                             Eventually, I had enough, and changed my focus to technology, steering my career into client
-                            success, product management, and software development roles, where I have been committed to facilitating end-user success.
-                            Leveraging my diverse background and technical profiency, I have worked extensively as a technical 
-                            liason collaborating with cross-functional teams, managing stakeholder expectations, and delivering high-quality
-                            solutions. As a developer, I have been a significant contributor to the design, development,
-                            and maintenance of applications improving data integrity, regulatory compliance, and workflow productivity.
+                            success, product management, and software development roles, where I have been committed to
+                            facilitating end-user success. Leveraging my diverse background and technical profiency, I
+                            have worked as both a technical liason and a software developer. 
+                            I have experience collaborating with cross-functional teams,
+                            managing stakeholder expectations, and delivering high-quality solutions, and have contributed to the design, development, and maintenance of
+                            applications improving data integrity, regulatory compliance, and workflow productivity. 
+                            <p>
+                            For more details regarding my skills, professional background, and education, view my <a class="text-dark" href="#experience">Experience</a> and 
+                                <a class="text-dark" href="#portfolio">Portfolio</a>, or visit my <a class="text-dark" href="https://www.linkedin.com/in/mirtacarter/" target="_blank">LinkedIn</a>.
+                            </p>
                         </p>
                         </p>
                     </div>
@@ -132,12 +140,18 @@
                         <p class="card-text"><small class="text-muted">March 2022 - April 2023</small></p>
                     </div>
                     <div class="card-body">
-                        Utilizing various technologies including Appian's proprietary SAIL language and Java process
-                        engines, REST APIs, GraphQL,
-                        Kafka, and Azure Event Grid, contributed to the design, development, and rapid delivery of
-                        user-friendly workspaces optimized for business processes,
-                        transitioning over 1800 users out of a cumbersome legacy system and resulting in significant
-                        compliance cost savings and improved turn times.
+                        <ul>
+                            <li>Contributed to the design, development, and rapid delivery of
+                                user-friendly workspaces optimized for business processes
+                            </li>
+                            <li>
+                                Transitioned over 1800 users out of a cumbersome legacy system and resulting in significant
+                        compliance cost savings and improved turn times
+                            </li>
+                                <li>Utilized various technologies including Appian's proprietary SAIL language and Java process
+                        engines, REST APIs, GraphQL, Kafka, and Azure Event Grid
+                        </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card shadow">
@@ -148,14 +162,15 @@
                                 December 2020 - March 2022</small></p>
                     </div>
                     <div class="card-body">
-                        Executed the product vision for Client Experience applications, collaborating with multiple
-                        development teams
-                        to navigate dependencies and integration work, leading user story refinement and product
-                        demonstrations, and
-                        working directly with clients to deliver a centralized loan pipeline management portal for
-                        Correspondent clients,
-                        as well as an enterprise case management application supporting multiple business teams handling
-                        over 421,000 inquiries.
+                        <ul>
+                            <li>Executed the product vision for Client Experience applications</li>
+                            <li> Collaborated with multiple development teams to navigate dependencies and integration work</li>
+                             <li>Led user story refinement and product demonstrations
+                             </li>  
+                             <li> Worked with stakeholders and leadership to deliver a centralized loan pipeline management portal for
+                        Correspondent clients, as well as an enterprise case management application supporting multiple business teams handling
+                        over 421,000 inquiries.</li> 
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -170,13 +185,20 @@
                                 September 2019 - November 2020</small></p>
                     </div>
                     <div class="card-body">
-                        Provided strategic technical consulting to clients as part of the Managed Services team,
-                        overseeing the execution of enterprise software upgrade projects for
+                       <ul> 
+                        <li>
+                            Provided strategic technical consulting to clients as part of the Managed Services team
+                        </li>
+                        <li>
+                            Oversaw the execution of enterprise software upgrade projects for
                         multiple clients with timelines ranging from 3 to 10 months, completing 100%
-                        of upgrades within approved budget and on target cutover date set by client, as well as working
-                        with solution design team on behalf of client to outline requirements for delivery of large
+                        of upgrades within approved budget and on target cutover date set by client
+                        </li>
+                        <li>
+                        Worked with solution design team on behalf of client to outline requirements for delivery of large
                         custom software modifications.
-
+                        </li>
+                    </ul>
                     </div>
                 </div>
                 <div class="card shadow">
@@ -187,11 +209,17 @@
                                 November 2018 - September 2019</small></p>
                     </div>
                     <div class="card-body">
-                        Supported the Home Funding division through all phases of the software development life cycle,
-                        including developing custom enhancements such as business rules, input forms, and
+                       <ul> 
+                        <li>
+                        Supported the Home Funding division through all phases of the software development life cycle
+                        </li>
+                        <li>
+                        Developed custom enhancements such as business rules, input forms, and
                         workflows utilizing VB.NET within the enterprise loan origination system to
                         fulfill business goals, meet compliance requirements, and support data
-                        integrity and reporting needs.
+                        integrity and reporting needs
+                        </li>                                              
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -236,8 +264,7 @@
 
 
     <!-- Portfolio Section -->
-    <!-- Hidden until projects are ready -->
-    <!-- <section id="portfolio" class="bg-mid">
+    <section id="portfolio" class="bg-mid">
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col mx-auto text-center">
@@ -255,7 +282,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img
-                                class="mx-auto d-block h-100" src="assets/images/gallery1.jpg" alt="" id="gallery"></a>
+                                class="mx-auto d-block img-fluid" src="assets/images/gallery1.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
                             <a class="portfolio-box" href="https://mirtacarter.github.io/triviagame/" target="_blank">
                                 <h4 class="text-uppercase">Lively</h4>
@@ -264,7 +291,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
                                 src="assets/images/gallery2.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
                             <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
@@ -273,7 +300,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
                                 src="assets/images/gallery3.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
                             <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
@@ -282,7 +309,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
                                 src="assets/images/gallery4.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
                             <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
@@ -291,7 +318,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block h-100"
+                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
                                 src="assets/images/gallery5.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
                             <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
@@ -310,7 +337,7 @@
                 </a>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
 
