--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <!-- Experience Section -->
     <section id="experience" class="bg-dark">
-        <div class="container-fluid">
+        <div class="vw-100">
             <div class="row justify-content-center">
                 <div class="col-lg mx-auto text-center">
                     <h2 class="section-heading text-uppercase text-white pb-1">Experience</h2>
@@ -224,6 +224,7 @@
                 </div>
             </div>
             <!-- Education and Certifications -->
+            <div class="container-fluid">
             <div class="row justify-content-center pb-1">
                 <div class="col-lg mx-auto text-center">
                     <h2 class="section-heading text-uppercase text-white pt-5 pb-1">Education and Certifications</h2>
@@ -258,6 +259,7 @@
                         <h6 class="card-subtitle text-muted">University of Florida, 2006</h6>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </section>
