adjusted text size on mobile

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <p>
                         <h2 class="section-heading text-uppercase text-center">About</h2>
                         </p>
-                        <p class="font-weight-normal mt-1">
+                        <p class="font-weight-normal mt-1" id="biotext">
                             I began my career in the financial services industry over a decade ago, starting off in
                             retail baking and eventually transitioning into mortgage operations and compliance. I spent
                             much of this time
@@ -101,7 +101,7 @@
                             using software that had not been implemented or configured correctly, or using software with
                             great features
                             that were simply not utilized.
-                        <p>
+                        <p id="biotext">
                             Eventually, I had enough, and changed my focus to technology, steering my career into client
                             success, product management, and software development roles, where I have been committed to
                             facilitating end-user success. Leveraging my diverse background and technical profiency, I
@@ -109,7 +109,7 @@
                             I have experience collaborating with cross-functional teams,
                             managing stakeholder expectations, and delivering high-quality solutions, and have contributed to the design, development, and maintenance of
                             applications improving data integrity, regulatory compliance, and workflow productivity. 
-                            <p>
+                            <p id="biotext">
                             For more details regarding my skills, professional background, and education, view my <a class="text-dark" href="#experience">Experience</a> and 
                                 <a class="text-dark" href="#portfolio">Portfolio</a>, or visit my <a class="text-dark" href="https://www.linkedin.com/in/mirtacarter/" target="_blank">LinkedIn</a>.
                             </p>
@@ -223,6 +223,7 @@
                     </div>
                 </div>
             </div>
+            </div>
             <!-- Education and Certifications -->
             <div class="container-fluid">
             <div class="row justify-content-center pb-1">
@@ -261,7 +262,6 @@
                 </div>
             </div>
             </div>
-        </div>
     </section>
 
 
