--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- Header Section -->
     <header class="masthead">
-        <div class="container-fluid" id="masthead">
+        <div class="container" id="masthead">
             <img class="align-self-center img-fluid" id="logo" src="assets/images/logo.png" alt="">
             <br>
             <div class="float-right">
