update portfolio links

--- a/index.html
+++ b/index.html
@@ -282,38 +282,38 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img
+                        <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank"><img
                                 class="mx-auto d-block img-fluid" src="assets/images/gallery1.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
-                            <a class="portfolio-box" href="https://mirtacarter.github.io/triviagame/" target="_blank">
+                            <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank">
                                 <h4 class="text-uppercase">Lively</h4>
                             <p>Search for jobs based on well-being</p>
                             </a>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
+                        <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
                                 src="assets/images/gallery2.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
-                            <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
+                            <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank">
                                 <h4 class="text-uppercase">Pantry Partner</h4>
                             <p>Search for recipes based on ingredients already on hand</p></a>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
+                        <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
                                 src="assets/images/gallery3.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
-                            <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
+                            <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank">
                                 <h4 class="text-uppercase">Radius</h4>
                             <p>View attractions and restaurants around a specific location</p></a>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
+                        <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank"><img class="mx-auto d-block img-fluid"
                                 src="assets/images/gallery4.jpg" alt="" id="gallery"></a>
                         <div class="carousel-caption">
-                            <a class="portfolio-box" href="http://wwww.github.com/andreacarter" target="_blank">
+                            <a class="portfolio-box" href="http://www.github.com/andreacarter" target="_blank">
                                 <h4 class="text-uppercase">Civitas</h4>
                             <p>Community Reinvestment Act tracking for banks</p></a>
                         </div>
