--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- Portfolio Section -->
     <section id="portfolio">
-        <div class="container">
+        <div class="container pb-4">
             <div class="row justify-content-center">
                 <div class="col mx-auto text-center">
                     <h2 class="section-heading text-center pb-3">&lt; Portfolio &gt;</h2>
@@ -194,6 +194,7 @@
                     </div>
                     </div>
     </section>
+
 
 
 
