--- a/index.html
+++ b/index.html
@@ -119,27 +119,26 @@
                 </div>
             </div>
             <div class="container" id="projects">
-                <div class="row justify-content-center no-gutters mb-0">
+                <div class="row justify-content-center no-gutters mb-0 mt-0">
                     <div class="col-auto">
-                                <!-- <img class="img-fluid" id="gallery" src="assets/images/gallery1.jpg" alt="..."> -->
-                                <img src="assets/images/placeholder.png">
-                              </div>
-                              <div class="col-md">
+                            <!-- <img class="img-fluid" id="gallery" src="assets/images/gallery3.jpg" alt="..."> -->
+                            <img class="img-fluid" src="assets/images/gallery1.png">
+                          </div>
+                            <div class="col-md">
                                 <div class="text-center h-100 project">
                                   <div class="d-flex h-100">
                                     <div class="project-text w-100 my-auto text-center text-lg-left">
-                                        <h4>Radius</h4>
-                                    <p>View attractions and restaurants around a specific location</p>
-                                  <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Github Repository</a> 
-                                  <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Site</a>
-                                </div>
-                              </div>
-                    </div>
-                    </div>
-                    </div>
+                                        <h4>Civitas</h4>
+                                <p>Community Reinvestment Act compliance tracking for banks</p>
+                                <a class="btn btn-light" href="http://www.github.com/andreacarter/civitas" target="_blank">View Github Repository</a> 
+                                <a class="btn btn-light" href="https://civitas-eight.vercel.app/" target="_blank">View Site</a>
+                            </div>
+                          </div>
+                </div>
+                </div>
+                </div>                
                     <div class="row justify-content-center no-gutters mb-0 mt-0">
                         <div class="col-auto">
-                                <!-- <img class="img-fluid" id="gallery" src="assets/images/gallery2.jpg" alt="..."> -->
                                 <img class="img-fluid" src="assets/images/placeholder.png">
                               </div>
                               <div class="col-md order-md-first">
@@ -155,24 +154,23 @@
                     </div>
                     </div>
                     </div>
-                    <div class="row justify-content-center no-gutters mb-0 mt-0">
+                    <div class="row justify-content-center no-gutters mb-0">
                         <div class="col-auto">
-                                <!-- <img class="img-fluid" id="gallery" src="assets/images/gallery3.jpg" alt="..."> -->
-                                <img class="img-fluid" src="assets/images/placeholder.png">
-                              </div>
-                                <div class="col-md">
+                                    <img src="assets/images/placeholder.png">
+                                  </div>
+                                  <div class="col-md">
                                     <div class="text-center h-100 project">
                                       <div class="d-flex h-100">
                                         <div class="project-text w-100 my-auto text-center text-lg-left">
-                                            <h4>Civitas</h4>
-                                    <p>Community Reinvestment Act tracking for banks</p>
-                                    <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Github Repository</a> 
-                                    <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Site</a>
-                                </div>
-                              </div>
-                    </div>
-                    </div>
-                    </div>
+                                            <h4>Radius</h4>
+                                        <p>View attractions and restaurants around a specific location</p>
+                                      <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Github Repository</a> 
+                                      <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Site</a>
+                                    </div>
+                                  </div>
+                        </div>
+                        </div>
+                        </div>                
                     </div>
                     </div>
     </section>
