update active portfolio projects

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <div class="text-center h-100 project">
                                   <div class="d-flex h-100">
                                     <div class="project-text w-100 my-auto text-center text-lg-left">
-                                        <h4>Civitas</h4>
+                                        <h4>In Development: Civitas</h4>
                                 <p>Community Reinvestment Act compliance tracking for banks</p>
                                 <a class="btn btn-light" href="http://www.github.com/andreacarter/civitas" target="_blank">View Github Repository</a> 
                                 <a class="btn btn-light" href="https://civitas-eight.vercel.app/" target="_blank">View Site</a>
@@ -145,10 +145,10 @@
                                 <div class="text-center h-100 project">
                                   <div class="d-flex h-100">
                                     <div class="project-text w-100 my-auto text-center text-lg-right">
-                                        <h4>Pantry Partner</h4>
+                                        <h4>Coming Soon: Pantry Partner</h4>
                                     <p>Search for recipes based on ingredients already on hand</p>
-                                    <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Github Repository</a> 
-                                    <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Site</a>                                  
+                                    <a class="btn btn-light disabled" href="http://www.github.com/andreacarter" target="_blank">View Github Repository</a> 
+                                    <a class="btn btn-light disabled" href="http://www.github.com/andreacarter" target="_blank">View Site</a>                                  
                                 </div>
                               </div>
                     </div>
@@ -162,10 +162,10 @@
                                     <div class="text-center h-100 project">
                                       <div class="d-flex h-100">
                                         <div class="project-text w-100 my-auto text-center text-lg-left">
-                                            <h4>Radius</h4>
+                                            <h4>Coming Soon: Radius</h4>
                                         <p>View attractions and restaurants around a specific location</p>
-                                      <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Github Repository</a> 
-                                      <a class="btn btn-light" href="http://www.github.com/andreacarter" target="_blank">View Site</a>
+                                      <a class="btn btn-light disabled" href="http://www.github.com/andreacarter" target="_blank">View Github Repository</a> 
+                                      <a class="btn btn-light disabled" href="http://www.github.com/andreacarter" target="_blank">View Site</a>
                                     </div>
                                   </div>
                         </div>
